fix: fixed logo overflow

--- a/src/server/components/GameDetails.scss
+++ b/src/server/components/GameDetails.scss
@@ -36,6 +36,7 @@
 			padding: 1rem;
 
 			max-width: 30rem;
+			max-height: 100%;
 		}
 
 		> .name
